<resources>
    <string name="app_name">Homework 1</string>
    <string name="menu_search">Button 1</string>

    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="button_7">Button 7</string>
    <string name="button_40">Button 40</string>
    <string name="button_100000">Button 100000</string>
    <string name="button_save">Save</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_search">Search</string>
    <string name="enter_user_information">Enter User Information</string>
    <string name="user">User</string>


</resources>
