<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task_1">

    <LinearLayout
        android:id="@+id/row_1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/button_1"/>

        <Button
            android:id="@+id/button_2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/button_1"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/button_2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_2"
        android:layout_below="@id/row_1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Button_3"
            android:text="@string/button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row_1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_3"
        android:layout_below="@id/row_2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Button_40"
            android:text="@string/button_40"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button_3"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/Button_100000"/>

        <Button
            android:id="@+id/Button_100000"
            android:text="@string/button_100000"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button_3"
            android:layout_alignParentEnd="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_4"
        android:layout_below="@id/row_3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_save"
            android:text="@string/button_save"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Button_40"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/button_submit"
            android:text="@string/button_submit"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/button_cancel"
            android:layout_toEndOf="@id/button_save"
            android:layout_below="@id/Button_40"/>

        <Button
            android:id="@+id/button_cancel"
            android:text="@string/button_cancel"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Button_100000"
            android:layout_alignParentEnd="true"/>

    </LinearLayout>

</RelativeLayout>